--- a/style.css
+++ b/style.css
@@ -65,8 +65,7 @@ main{
 .spotify-logo>img{
   width: 90px;
 }
-.nav1-div{
-}
+
 
 .nav1-div, .your-library{
   box-sizing: border-box;
@@ -91,11 +90,11 @@ main{
   font-weight: 900;
   line-height: 16px; /* 114.286% */
 }
-.nav-text-lite{
+.nav-text-lite , .foot-section1 p{
   color: #ffffffbe;
   font-size: 14px;
   font-weight: 700;
-  line-height: 16px; /* 114.286% */
+  line-height: 16px;
 }
 .nav-text-lite:hover{
   color: #FFF;
@@ -121,7 +120,7 @@ color:white;
 }
 
 .library{
-  height: 50px;
+  height: 100px;
   z-index: 1;
 }
 .createdlist {
@@ -278,6 +277,7 @@ h2{
 }
 .foot-player{
   display: flex;
+  color:white;
   background: #181818;
   width: 100%;
   justify-content: space-between;
@@ -289,6 +289,7 @@ h2{
   gap: 20px;
   margin-inline: 30px;
 }
+
 .foot-section2{
   display: flex;
   flex-direction: column;
@@ -339,6 +340,11 @@ h2{
   margin-right: 6em;
   gap: 0.5em;
   color: black;
+  font-weight: 700;
+}
+.playlist-btn a{
+  color:  rgb(64, 179, 7) !important;
+  font-size: 14px;
   font-weight: 700;
 }
 .playlist-hero{
