--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-*{
-  margin: 0 ;
-  padding: 0 ;
-  
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+* {
+  margin: 0;
+  padding: 0;
 }
-body,html{
+p {
+  margin: 0 !important;
+}
+body,
+html {
   display: flex;
   height: 100%;
   flex-direction: column;
@@ -14,26 +17,24 @@ body,html{
   display: flex;
   flex-direction: column;
   overflow-y: hidden;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
-  
 }
-a{
+a {
   text-decoration: none !important;
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none;
 }
 
-.containr{
+.containr {
   display: flex;
   height: 100%;
   flex: 1;
-  overflow: hidden; 
+  overflow: hidden;
   padding: 10px;
-  
 }
-.aside{
+.aside {
   flex: 0.25;
   display: flex;
   flex-direction: column;
@@ -41,17 +42,32 @@ a{
   margin-right: 0.5rem;
   /* box-sizing: border-box; */
 }
-main{
+main {
   flex: 0.75;
-  background: linear-gradient(180deg, #222 0%, #1F1F1F 11.64%, #171717 25.66%, #161616 32.94%, #151515 35.98%, #131313 44.89%, #121212 55.22%, #121212 75.34%, #121212 85.45%, rgba(18, 18, 18, 0.00) 100%);
+  background: linear-gradient(
+    180deg,
+    #222 0%,
+    #1f1f1f 11.64%,
+    #171717 25.66%,
+    #161616 32.94%,
+    #151515 35.98%,
+    #131313 44.89%,
+    #121212 55.22%,
+    #121212 75.34%,
+    #121212 85.45%,
+    rgba(18, 18, 18, 0) 100%
+  );
   overflow-y: scroll;
   margin-bottom: 100px;
-  padding-inline:30px;
+
   border-radius: 10px;
   box-sizing: border-box;
-  color: #FFF;
+  color: #fff;
 }
-.navbar{
+.main-section {
+  padding-inline: 30px;
+}
+.navbar {
   display: flex;
   height: 100%;
   flex-direction: column;
@@ -62,89 +78,90 @@ main{
   flex: 1;
   padding: 0 !important;
 }
-.spotify-logo>img{
+.spotify-logo > img {
   width: 90px;
 }
 
-
-.nav1-div, .your-library{
+.nav1-div,
+.your-library {
   box-sizing: border-box;
   padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: start;
+  justify-content: space-between;
   width: 100%;
   border-radius: 10px;
   background-color: #121212;
   gap: 1em;
   margin-bottom: 0.5em;
 }
-.your-library{
+.your-library {
   height: 100vh;
 }
-.nav-text{
-  color: #FFF;
+.nav-text {
+  color: #fff;
   font-size: 14px;
 
   font-weight: 900;
   line-height: 16px; /* 114.286% */
 }
-.nav-text-lite , .foot-section1 p{
+.nav-text-lite,
+.foot-section1 p {
   color: #ffffffbe;
   font-size: 14px;
   font-weight: 700;
   line-height: 16px;
 }
-.nav-text-lite:hover{
-  color: #FFF;
+.nav-text-lite:hover {
+  color: #fff;
 }
-a{
+a {
   color: white;
   text-decoration: none;
 }
-.gray-color{
-  color: #B3B3B3;
+.gray-color {
+  color: #b3b3b3;
   cursor: pointer;
   font-size: 14px;
   font-weight: 700;
   line-height: 16px;
 }
-.gray-color:hover{
-color:white;
+.gray-color:hover {
+  color: white;
 }
-.betweengap{
+.betweengap {
   display: flex;
   gap: 2em;
   align-items: center;
 }
-
-.library{
-  height: 100px;
-  z-index: 1;
+.library {
+  width: 100%;
+  height: 130px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 1; 
 }
 .createdlist {
-    overflow-y: auto; /* Enable vertical scrolling */
-    white-space: nowrap;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    gap: 1em;
+  overflow-y: auto;
+  white-space: nowrap;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 1em;
 }
 
-
-footer{
+.footer {
   height: 100px;
   width: 100%;
   position: fixed;
   bottom: 0px;
   left: 0px;
-  background-color: #1ED760;
+  background-color: #1ed760;
 }
 
-
-
-.box{
+.box {
   width: 50px;
   height: 50px;
   display: flex;
@@ -154,33 +171,48 @@ footer{
   border-radius: 5px;
   flex-shrink: 0;
 }
-.liked-songs-icon{
-  background: linear-gradient(135deg, #4000F4 0%, #603AED 22.48%, #7C6EE6 46.93%, #979FE1 65.71%, #A2B3DE 77.68%, #ADC8DC 88.93%, #C0ECD7 100%);
+.liked-songs-icon {
+  background: linear-gradient(
+    135deg,
+    #4000f4 0%,
+    #603aed 22.48%,
+    #7c6ee6 46.93%,
+    #979fe1 65.71%,
+    #a2b3de 77.68%,
+    #adc8dc 88.93%,
+    #c0ecd7 100%
+  );
 }
-.favourites-icon{
+.favourites-icon {
   background-color: #004638;
 }
-.list{
+.list {
   display: flex;
   flex-direction: column;
   gap: 10px; /*need to check */
-  
 }
-.list>li{
+.list > li {
   list-style: none;
 }
 
-.top-section{
+.top-section {
+  height: 70px;
   display: flex;
-  height: 60px;
   align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
+  position: sticky;
+  top: 0;
+  background: #121212;
+  padding-inline: 30px;
+  z-index: 99;
 }
-.directions{
+.directions {
   display: flex;
   gap: 1em;
+  align-items: center;
 }
-.direction-box{
+.direction-box {
   height: 40px;
   width: 40px;
   background-color: black;
@@ -188,10 +220,11 @@ footer{
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  flex-shrink: 0;
+  cursor: pointer;
 }
 
-.login{
+.login {
   background-color: black;
   border-radius: 20px;
   color: white;
@@ -201,88 +234,118 @@ footer{
   justify-content: space-between;
   height: 40px;
   align-items: center;
+  cursor: pointer;
 }
-.login>p{
-  margin:0 !important;
+.login > p {
+  margin: 0 !important;
 }
 
-.main-list{
+.main-list {
   display: flex;
   justify-content: start;
   flex-wrap: wrap;
 }
-h2{
-  margin: 20px 0px;
-}
-.main-box{
+.main-box {
   width: 325px;
   height: 100px;
   display: flex;
   margin: 10px 25px 10px 0px;
   align-items: center;
   border-radius: 4px;
-  background: #303030;
+  background: #3030308e;
   overflow: hidden;
   gap: 20px;
+  cursor: pointer;
 }
-.linear-heartbox{
+.main-box:hover{
+  background: #303030;
+}
+.linear-heartbox {
   width: 100px;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(135deg, #4000F4 0%, #603AED 22.48%, #7C6EE6 46.93%, #979FE1 65.71%, #A2B3DE 77.68%, #ADC8DC 88.93%, #C0ECD7 100%);
+  background: linear-gradient(
+    135deg,
+    #4000f4 0%,
+    #603aed 22.48%,
+    #7c6ee6 46.93%,
+    #979fe1 65.71%,
+    #a2b3de 77.68%,
+    #adc8dc 88.93%,
+    #c0ecd7 100%
+  );
 }
-.main-section{
+.main-section {
   margin-top: 30px;
 }
 
-.playlists{
+.playlists {
   display: flex;
   justify-content: start;
   flex-wrap: wrap;
-  gap:20px;
+  gap: 20px;
 }
-.playlist-head{
+.playlist-head {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.playlist-head>p{
+.playlist-head > a {
   font-size: 17px;
-  font-style: normal;
   font-weight: 700;
   line-height: normal;
   letter-spacing: 0.68px;
 }
-.playlist-item{
+.playlist-item {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 250px;
-  height: 285px;
+  height: 300px;
+  padding: 30px;
   flex-shrink: 0;
   background-color: #181818;
-  display: flex;
-  justify-content: center;
-  
+  border-radius: 10px;
+  cursor: pointer;
 }
-.playlist-item>div{
+.playlist-item:hover {
+  background-color: #282828;
+
+}
+.playlist-item > div {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-.playlist-item>img{
-  width: 200px;
-  height: 200px;
+.playlist-item  img {
   flex-shrink: 0;
 }
-.foot-player{
+.playlist-hoverplay{
+  position: absolute;
+  top: 55%;
+  right: 12%;
+  opacity: 0;
+  transition: opacity 0.4s;
+}
+.playlist-item :hover .playlist-hoverplay{
+ opacity: 1;
+}
+
+.foot-player {
   display: flex;
-  color:white;
+  color: white;
   background: #181818;
   width: 100%;
   justify-content: space-between;
 }
-.foot-section1,.foot-section3,.foots2-controls{
+.foot-section1,
+.foot-section3,
+.foots2-controls {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -290,30 +353,33 @@ h2{
   margin-inline: 30px;
 }
 
-.foot-section2{
+.foot-section2 {
   display: flex;
   flex-direction: column;
   width: 40vw;
   justify-content: center;
 }
-.foots2-playtimeline{
+.foots2-playtimeline {
   display: flex;
 }
-.timeline-bar{
+.timeline-bar {
   width: 40vw;
   margin: 0px 10px;
 }
-.timeline-bar,.volume-bar{
+.timeline-bar,
+.volume-bar {
   -webkit-appearance: none;
   background-color: transparent;
 }
-.timeline-bar::-webkit-slider-runnable-track ,.volume-bar::-webkit-slider-runnable-track{
+.timeline-bar::-webkit-slider-runnable-track,
+.volume-bar::-webkit-slider-runnable-track {
   height: 4px;
   background: #b3b3b3;
   border: none;
-  border-radius: 100px;
+  border-radius: 2px;
 }
-.timeline-bar::-webkit-slider-thumb, .volume-bar::-webkit-slider-thumb {
+.timeline-bar::-webkit-slider-thumb,
+.volume-bar::-webkit-slider-thumb {
   -webkit-appearance: none;
   border: none;
   height: 16px;
@@ -322,19 +388,19 @@ h2{
   background: white;
   margin-top: -6px;
 }
-.volume-bar{
+.volume-bar {
   width: 100px;
 }
-.devicetype{
-  height:100%;
+.devicetype {
+  height: 100%;
   position: relative;
   display: flex;
 }
-.devicetype-uparrow{
+.devicetype-uparrow {
   position: absolute;
   bottom: 0px;
 }
-.foot-devicename{
+.foot-devicename {
   display: flex;
   justify-content: right;
   margin-right: 6em;
@@ -342,21 +408,72 @@ h2{
   color: black;
   font-weight: 700;
 }
-.playlist-btn a{
-  color:  rgb(64, 179, 7) !important;
+.playlist-btn a {
+  color: rgb(19, 56, 1) !important;
   font-size: 14px;
   font-weight: 700;
 }
-.playlist-hero{
+.playlist-hero {
   display: flex;
   height: 300px;
   align-items: center;
-  justify-content:start;
+  justify-content: start;
   box-sizing: border-box;
 }
-.playlist-table{
+.playlist-1st-div {
+  height: 80px;
+}
+.playlist-table {
   width: 100%;
 }
-.playlist-table>tr{
-
+table {
+  /* border: 1px solid white !important; */
+  border-spacing: 100px !important;
+}
+td,
+th {
+  padding: 10px;
+}
+.table-stickyhead {
+  position: sticky;
+  top: 60px;
+}
+tr:hover {
+  background-color: #b3b3b34a;
+}
+table tr:first-child {
+  background-color: #12121203;
+}
+tr th:last-child {
+  text-align: center;
+}
+tr td:first-child {
+  border-radius: 5px 0px 0px 5px;
+}
+tr td:last-child {
+  border-radius: 0px 5px 5px 0px;
+}
+.table-heart-icon {
+  margin-right: 10px;
+}
+.playlist-footer{
+  height: 70px;
+  width: 100%;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  background-color:white;
+}
+.playlist-foot-player{
+  height: 70px;
+  width: 100%;
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  background-color: #121212;
+  display: flex;
+  color: white;
+  background: #181818;
+  width: 100%;
+  justify-content: space-between;
 }
