--- a/style.css
+++ b/style.css
@@ -429,10 +429,12 @@ a {
 table {
   /* border: 1px solid white !important; */
   border-spacing: 100px !important;
+  width: 100%;
 }
 td,
 th {
-  padding: 10px;
+  padding: 10px 20px;
+  position: relative;
 }
 .table-stickyhead {
   position: sticky;
@@ -440,6 +442,17 @@ th {
 }
 tr:hover {
   background-color: #b3b3b34a;
+}
+
+.table-td-play{
+  position: absolute;
+  opacity: 0;
+}
+tr:hover td:first-child>p{
+  opacity: 0;
+}
+tr:hover .table-td-play{
+  opacity: 1
 }
 table tr:first-child {
   background-color: #12121203;
